Added more user validations to category templates
