# swagger.yaml
@@ -180,7 +180,7 @@ paths:
           description: "Budget month not found"
     patch:
       summary: 'Update a budget month by ID'
-      description: "Update extra income of a budget month"
+      description: "Update extra income of a budget month. ID must be owned by user"
       parameters:
         - in: path
           name: id
@@ -212,44 +212,10 @@ paths:
       responses:
         '200':
           description: Budget month updated successfully
+        '401':
+          description: "Unauthorized"
         '404':
           description: "Budget month not found"
-
-  /budget-category/{id}:
-    patch:
-      summary: Update a budget category by ID
-      description: Update name and/or amount budgeted to a budget category
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: The ID of the budget category to update
-          schema:
-            type: integer
-      requestBody:
-        description: Array of updates to apply to budget category
-        required: true
-        content:
-          application/json:
-            schema:
-              properties:
-                updates:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      field:
-                        type: string
-                        enum:
-                          - name
-                          - amountBudgeted
-                      value:
-                        type: string
-                        description: New value for field
-                        example: "Bills & Utils"
-      responses:
-        200: 
-          description: Budget category updated successfully
 
   /category-templates:
     get:
@@ -306,7 +272,41 @@ paths:
         401:
           description: "Unauthorized"
 
-    
+  /category-templates/{id}:
+      patch:
+        summary: Update a budget category by ID
+        description: Update name and/or amount budgeted to a budget category
+        parameters:
+          - in: path
+            name: id
+            required: true
+            description: The ID of the budget category to update
+            schema:
+              type: integer
+        requestBody:
+          description: Array of updates to apply to budget category
+          required: true
+          content:
+            application/json:
+              schema:
+                properties:
+                  updates:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        field:
+                          type: string
+                          enum:
+                            - name
+                            - amountBudgeted
+                        value:
+                          type: string
+                          description: New value for field
+                          example: "Bills & Utils"
+        responses:
+          200: 
+            description: Budget category updated successfully
   /transactions:
     post:
       summary: 'Add a transaction'
